<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EyojFoodAndGrocery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_login">Login</string>
    <string name="label_create_account">Create Account</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_name">UserName</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="action_change">Change</string>
    <string name="info_added_to_weekly_favorites">%1$s Added to Weekly Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="action_details">Details</string>
    <string name="title_order_history">Order History</string>
    <string name="info_no_previous_orders">No Previous orders</string>
    <string name="action_track_my_order">Track My Order</string>
    <string name="info_preparing_order">Your order will be prepared and will come soon</string>
    <string name="title_preparing_your_order">Preparing your order</string>
    <string name="info_check_order_status_to_know_more">Check your order status to know more about next steps information</string>
    <string name="info_order_success_affirmation_template"> your order has been successful</string>
    <string name="title_my_favorite_list">My Favorite List</string>
    <string name="total_cost">Total: \u20BA %1$.2f</string>
    <string name="title_my_weekly_list">My Weekly List</string>
    <string name="title_my_monthly_list">My Monthly List</string>
    <string name="label_search_product">Search Product…</string>
    <string name="label_add_all_items_to_cart">Add All Items to Cart</string>
    <string name="action_place_order">Place Order</string>
    <string name="label_total">Total \u20BA %1$d </string>
    <string name="favorite_food_price">\u20BA %1$s</string>
    <string name="label_delivery">Delivery</string>
    <string name="label_discount">Discount</string>
    <string name="label_subtotal">Subtotal</string>
    <string name="title_product_cart">Product Cart</string>
    <string name="label_ordered">Ordered</string>
    <string name="label_order_id">Order ID</string>
    <string name="label_status">Status</string>
    <string name="label_add_to_contd">Add to…</string>
    <string name="label_weekly_list">Weekly List</string>
    <string name="label_monthly_list">Monthly List</string>
    <string name="action_done">Done</string>
    <string name="label_home">Home</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_cart">Cart</string>
    <string name="label_orders">Orders</string>
    <string name="label_profile">Profile</string>
    <string name="info_inventory_added_to_cart">%1$s Added to cart</string>
    <string name="info_already_carted_single">Already in the cart 😀</string>
    <string name="info_price_tl_template">\u20BA %1$.2f </string>
    <string name="info_already_carted_multi">Everything is already there 😀</string>
    <string name="error_something_went_wrong">Something Went Wrong</string>
    <string name="info_to_place_order_now">to place your order now!</string>
    <string name="confirm_my_order">Confirm My Order</string>
    <string name="want_to_delete">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="quick_order_text">Quick order</string>
    <string name="info_inventory_already_in_cart">%1$s already in cart</string>
    <string name="send_my_order">Send My Order</string>
    <string name="label_order_status_accepted">Accepted</string>
    <string name="label_order_status_pending">Pending</string>
    <string name="label_order_status_dispatched">Dispatched</string>
    <string name="label_order_status_delivered">Delivered</string>
    <string name="label_order_status_canceled">Canceled</string>
    <string name="info_order_id_template">Order: %1$s</string>
    <string name="cart_food_price">\u20BA %1$d</string>
    <string name="error_order_details_not_found">Order details not found</string>
    <string name="info_to_view_order_history">to view your order history</string>
    <string name="user_need_to_be_login">User need to be login</string>
    <string name="phone_number">+919999999999</string>
    <string name="user_adress">4996 jadewood Farms New Brunswick, Nj 08901</string>
    <string name="change_items_quantity_in_cart">Change %1$s quantity in Cart</string>
    <string name="all_favorite_foods_added_to_cart">All favorite foods added to cart</string>
    <string name="all_favorite_foods_already_in_to_cart">All favorite foods already in to cart</string>
    <plurals name="info_no_of_items_added_to_cart">
        <item quantity="one">Added %1$d item to the Cart</item>
        <item quantity="other">Added %1$d items to the Cart</item>
    </plurals>
    <string-array name="category_names">
        <item>Name Ascending</item>
        <item>Name Descending</item>
        <item>Price Ascending</item>
        <item>Price Descending</item>
    </string-array>
</resources>
