<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eyoj_gray_100"
    android:fitsSystemWindows="true"
    tools:context=".presentation.orders.OrderSuccessFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationForSplash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/orderSuccessLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/animationforordersuccess"
        app:lottie_repeatMode="restart"
        app:lottie_loop="true"/>

    <LinearLayout
        android:id="@+id/orderSuccessLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/img_order_checked"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_check_square" />

        <TextView
            android:id="@+id/txt_affirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:text="@string/info_order_success_affirmation_template"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            tools:text="Mr. Eyoj, your order has been successful" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="56dp"
            android:text="@string/info_check_order_status_to_know_more"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:contentPadding="@dimen/margin_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CardView.TopCorners.Small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_preparing_order_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_preparing_your_order"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/txt_preparing_order_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/info_preparing_order"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_track_order"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_medium"
                android:layout_below="@id/txt_preparing_order_caption"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/action_track_my_order"
                android:textAllCaps="false" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>