<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eyoj_gray_100"
    android:orientation="vertical"
    tools:context=".presentation.favorite.FavoriteFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/title_my_favorite_list"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textStyle="bold" />
        </FrameLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_weekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        app:cardCornerRadius="8dp"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weekly_favorite_view_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/weekly_favorite_view"
                layout="@layout/circular_favorite_button" />

            <TextView
                android:id="@+id/txt_weekly_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_toEndOf="@+id/weekly_favorite_view"
                android:text="@string/title_my_weekly_list"
                app:layout_constraintTop_toTopOf="@+id/weekly_favorite_view"
                app:layout_constraintStart_toEndOf="@+id/weekly_favorite_view"
                app:layout_constraintBottom_toBottomOf="@+id/weekly_favorite_view"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <ImageView
                android:id="@+id/iv_weekly_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintTop_toTopOf="@+id/weekly_favorite_view"
                app:layout_constraintBottom_toBottomOf="@+id/weekly_favorite_view"
                app:layout_constraintEnd_toEndOf="@+id/weekly_favorite_view_constraint_layout"
                app:tint="@color/eyoj_gray_200" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_monthly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        app:cardCornerRadius="8dp"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/monthly_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/monthly_favorite_view"
                layout="@layout/circular_favorite_button" />

            <TextView
                android:id="@+id/txt_monthly_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_toEndOf="@+id/monthly_favorite_view"
                android:text="@string/title_my_monthly_list"
                app:layout_constraintTop_toTopOf="@id/monthly_favorite_view"
                app:layout_constraintBottom_toBottomOf="@+id/monthly_favorite_view"
                app:layout_constraintStart_toEndOf="@id/monthly_favorite_view"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <ImageView
                android:id="@+id/iv_monthly_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_arrow_right"
                app:tint="@color/eyoj_gray_200"
                app:layout_constraintTop_toTopOf="@id/monthly_favorite_view"
                app:layout_constraintBottom_toBottomOf="@+id/monthly_favorite_view"
                app:layout_constraintEnd_toEndOf="@+id/monthly_constraint_layout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>